window/onscreen-display/style.scss
@use "sass:string";
@import '../../animation.scss';

@function gtkalpha($color, $alpha) {
  @return string.unquote("alpha(#{$color},#{$alpha})");
}

* { all: unset; }
.debug { background-color: red; color: black; .debug { background-color: blue; .debug { background-color: green; } } }
.shadow { box-shadow: 0px 0px 5px gtkalpha(black, 0.5); }
.uppercase { text-transform: uppercase; }

.onscreen-display {
//   background: linear-gradient(to bottom, #070B1F, #040714);
//   border: 1.5px solid #0A102E;
  image { -gtk-icon-shadow: 0px 0px 4px rgba(black, 0.5); }
    font-family: Rajdhani;
    text-transform: uppercase;
    color: #e0eaf8; font-weight: 600;
    text-shadow: 0px 1px 4px hsla(230, 50%, 60%, 0.2);
    font-size: 8px;
    .id { font-size: 35px; font-weight: bolder; font-family: Chakra Petch; }
    .decoration-text { font-size: 5px; color: #161a30; letter-spacing: 1.0px; }
    .monitor { font-size: 7px; }
}

